# gnosis

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg
.github/workflows/: ci.yaml
artifacts/: analysis_summary_442119.csv.meta.json  analysis_summary_446854.csv.meta.json  analysis_summary_447541.csv.meta.json  inference_judged_442119.csv.meta.json  inference_judged_446854.csv.meta.json  inference_judged_447541.csv.meta.json  inference_raw_442119.csv.meta.json  inference_raw_446854.csv.meta.json  inference_raw_447541.csv.meta.json
backlog/: analytics_development_plan.json
configs/: analyst_run.yaml
docs/: analytics_addin_authoring.md
src/: __init__.py  analyst.py  cli.py  orchestrator.py  types.py  validate_configs.py
src/analytics/: __init__.py  addin_registry.py  addin_runner.py  aggregation.py  analytics_addin_base.py  analytics_addin_manifest_validator.py  api.py  cli.py  config.py  db.py  db_postgres.py  experiment_tracker.py  input_data_validator.py  registry.py  visualization.py
src/config/: analytics_config.py  default_analytics_config.yaml
src/gui/: app.py
tests/: conftest.py  conftest.py (update)  smoke_test.py  test_analytics.py  test_analytics_smoke.py  test_config_variations.py  test_end_to_end.py  test_visualization_smoke.py
tests/analytics/: test_addin_base.py  test_addin_manifest_validator.py  test_addin_registry.py  test_addin_runner.py  test_aggregate_metrics.py  test_aggregation.py  test_cli.py  test_db_file.py  test_db_postgres.py  test_experiment_tracker.py  test_input_data_validator.py  (+10 more)
(+12 files in other folders)
