[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnosis"
version = "0.0.0"
description = "Gnosis prompt research bench"
authors = [{name = "johnrobins204"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0,<2.0",
    "scipy>=1.7.0",
    "nltk>=3.6.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "transformers>=4.18.0",
    "pyyaml>=6.0",
    "pytest",
]